fix: correct claim block calculations, locales